<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.Tanmay.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/first_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sign_up_fragment_1_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.Tanmay.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sign_up_fragment_1_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sign_up_radio_button_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/sign_up_radio_button_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/sign_up_radio_button_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/other" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp">

        <android.support.design.button.MaterialButton
            android:id="@+id/sign_up_fragment_1_button_cancel"
            style="@style/Widget.Tanmay.MaterialButton.TextButton"
            android:layout_marginRight="16dp"
            android:text="@string/cancel" />

        <android.support.design.button.MaterialButton
            android:id="@+id/sign_up_fragment_1_button_next"
            style="@style/Widget.Tanmay.MaterialButton"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
