<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_parent_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.tanmay.shoppingapp.Activities.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Image of the product -->
        <ImageView
            android:id="@+id/ProductPageProductImage"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail_photo_of_product"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/placeholder" />

        <!-- Price of product -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/currency_symbol"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ProductPageProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/placeholder_price"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Description of product -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ProductPageDescriptionSeeLess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:padding="8dp"
                android:text="@string/see_less"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ProductPageProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="5"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/placeholder_description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ProductPageDescriptionSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/see_more"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Quantity selector-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/quantity"
                android:textSize="20sp" />

            <Button
                android:id="@+id/productPageQuantityDecrease"
                style="@style/Widget.Tanmay.MaterialButton"
                android:layout_width="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:elevation="4dp"
                android:text="@string/reduce_quantity" />

            <TextView
                android:id="@+id/productPageQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/default_initial_quantity"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/productPageQuantityIncrease"
                style="@style/Widget.Tanmay.MaterialButton"
                android:layout_width="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorAccent"
                android:elevation="4dp"
                android:text="@string/increase_quantity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <!-- Buy now -->
            <Button
                style="@style/Widget.Tanmay.MaterialButton"
                android:layout_margin="16dp"
                android:elevation="4dp"
                android:text="@string/buy_now" />

            <!-- Add to cart -->
            <Button
                android:id="@+id/add_to_cart"
                style="@style/Widget.Tanmay.MaterialButton"
                android:layout_margin="16dp"
                android:elevation="4dp"
                android:text="@string/add_to_cart" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
