<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/sign_up_step_1_cancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_close_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/first_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sign_up_fragment_1_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/john"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/last_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sign_up_fragment_1_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/doe"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sign_up_radio_button_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/sign_up_radio_button_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/sign_up_radio_button_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:text="Next"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

    </LinearLayout>

</RelativeLayout>
