<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sign_up_fragment_2_toolbar"
        style="@style/Widget.Tanmay.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.Tanmay.TextInputLayout"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sign_up_step_2_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.Tanmay.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sign_up_step_2_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.Tanmay.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sign_up_step_2_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp">

        <android.support.design.button.MaterialButton
            android:id="@+id/sign_up_fragment_2_button_previous"
            style="@style/Widget.Tanmay.MaterialButton.TextButton"
            android:layout_marginRight="16dp"
            android:text="@string/previous" />

        <android.support.design.button.MaterialButton
            android:id="@+id/sign_up_fragment_2_button_done"
            style="@style/Widget.Tanmay.MaterialButton"
            android:text="@string/done" />

    </LinearLayout>

</LinearLayout>